# SimCem

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  MANIFEST.in  README.md  default.nix  derivation.nix  old_setup.py  pyproject.toml  setup.py  vcpkg.json
.github/workflows/: build.yaml  python.yaml  unit_tests.yaml  wheels.yaml
calcs/: STEP.py
cmake/: DownloadCoinhsl.cmake  FindEigen3.cmake  FindIPOPT.cmake
pysrc/simcem/: KilnData.py  __init__.py  clinker.py  core.cpp  distillation.py  kiln.cpp  kiln.py  kiln_core.cpp
recipe/: build.sh  meta.yaml
src/simcem/simcem/: config.hpp  curve.hpp  enum.hpp  kiln.hpp  simcem.cpp  simcem.hpp  sundials.hpp
tests/: KilnData.py  database.py  kiln.py  simcem_example.cpp  test_bogue.py  test_database.py  test_kiln.py  test_kiln_example.py  test_wahab.py
